# UR10PicturePainter

./: .gitmodules  CMakeLists.txt  README.md  check_trj.m  go_to_csv.py
config/: robot.json
src/kinematic_solver/: CMakeLists.txt  ur10_kinematic.cpp  ur10_kinematic.h
src/paint_operation/: CMakeLists.txt  draw_csv.cpp
src/picture_process/: CMakeLists.txt  contour_finder.cpp  contour_finder.h  dot_generator.cpp  dot_generator.h  edge_cutter.cpp  edge_cutter.h  image_filter.cpp  image_filter.h  layer_parser.cpp  layer_parser.h
src/picture_process/tests/: test_contour_finder.cpp  test_filters.cpp  test_layer_parser.cpp  test_paint_gen.cpp
src/property_manager/: CMakeLists.txt  property_manager.cpp  property_manager.h
src/tests/: CMakeLists.txt  test_ctrl.cpp  test_ctrl_C.cpp
src/trj_planer/: CMakeLists.txt  besie_interpolation.h  besie_spline.h  trj_planer.cpp  trj_planer.h
src/trj_planer/tests/: test_trj_planer.cpp
visualize/: vizualize_trj.py
